--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Билеты</title>
-    <script type="module" crossorigin src="/main.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/index.css">
+    <script type="module" crossorigin src="/project-airlines/main.js"></script>
+    <link rel="stylesheet" crossorigin href="/project-airlines/assets/index.css">
   </head>
   <body>
     <div id="app"></div>
